--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300,700);
+
 @import "vendor/normalize";
 
 @import "bourbon";
 @import "base/base";
-@import "neat";
+
+// @import "typeplate-starter-kit/scss/typeplate";
 
 @import "global";
