--- a/source/assets/stylesheets/base/_base.scss
+++ b/source/assets/stylesheets/base/_base.scss
@@ -7,6 +7,7 @@
 
 // Neat Settings -- this file must be imported before Neat
 @import "grid-settings";
+@import "neat";
 
 @import "buttons";
 @import "forms";
