--- a/source/assets/stylesheets/base/_buttons.scss
+++ b/source/assets/stylesheets/base/_buttons.scss
@@ -2,7 +2,7 @@
 button {
   @include appearance(none);
   -webkit-font-smoothing: antialiased;
-  background-color: $action-color;
+  background-color: $link-color;
   border-radius: $base-border-radius;
   border: none;
   color: #fff;
@@ -20,7 +20,7 @@ button {
 
   &:hover,
   &:focus {
-    background-color: darken($action-color, 15%);
+    background-color: darken($link-color, 15%);
     color: #fff;
   }
 
