--- a/source/assets/stylesheets/base/_forms.scss
+++ b/source/assets/stylesheets/base/_forms.scss
@@ -46,7 +46,7 @@ textarea {
   }
 
   &:focus {
-    border-color: $action-color;
+    border-color: $link-color;
     box-shadow: $form-box-shadow-focus;
     outline: none;
   }
