--- a/source/assets/stylesheets/base/_grid-settings.scss
+++ b/source/assets/stylesheets/base/_grid-settings.scss
@@ -10,5 +10,18 @@
 $medium-screen: em(640);
 $large-screen: em(860);
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$screen-mobile: 400px;
+$screen-phablet: 550px;
+$screen-tablet: 750px;
+$screen-desktop: 1000px;
+$screen-desktophd: 1200px;
+
+$mobile-up: new-breakpoint(min-width $screen-mobile);
+$phablet-up: new-breakpoint(min-width $screen-phablet);
+$tablet-up: new-breakpoint(min-width $screen-tablet);
+$desktop-up: new-breakpoint(min-width $screen-desktop);
+$desktophd-up: new-breakpoint(min-width $screen-desktophd);
+
+$small-screen-up: $phablet-up;
+$medium-screen-up: $tablet-up;
+$large-screen-up: $desktop-up;
