--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -1,11 +1,36 @@
 ---
-title: Page Title
+title: Woibbadinga
 ---
 
-.delete-me
+.cover.section-image.full
+  %h1 Woibbadinga
+
+.intro.section-text
+  .container.center
+    %h1 Des glabst ja gor ned!
+    %p.lead
+      Bavaria ipsum dolor sit amet glacht gor in da greana Au oans Gstanzl Sauwedda Gstanzl Ramasuri is des liab Deandlgwand? Almrausch Blosmusi Haberertanz Schaung kost nix Enzian iabaroi. Soi a Maß und no a Maß an an Hendl Marei Oachkatzlschwoaf Greichats! Obacht Broadwurschtbudn du dadst ma scho daugn ma Ewig und drei Dog i hob di narrisch gean, is ma Wuascht ma. Eam Brodzeid Schneid soi, do is Sepp Jodler. Nix Vergeltsgott pfenningguat oans, zwoa, gsuffa Engelgwand Schneid. Zidern oa auszutzeln Weibaleid, Marterl nimma. I hab an Breihaus wui unbandig Breihaus guad, des muas ma hoid kenna. A bravs blärrd jo mei is des schee oa hi wos, Engelgwand Servas Schbozal ned. Zidern Griasnoggalsubbm sog i Hetschapfah Reiwadatschi, a Prosit der Gmiadlichkeit wo hi Hemad Maibam nimmds!
+
+.orange.section-image.full
+  %h2 Sakrisch guat!
+
+.samples.section-text
   .container
-    %h1 Proteus
-    %p
-      You're all set!
-      <a href="http://github.com/thoughtbot/proteus-middleman">Let's get started</a>
-      building your prototype.
+    .three.columns
+      .one.center
+        = image_tag 'sample1.jpg'
+        %h4 Lewakaas
+        %p.lead Ned naa i daad Lewakaas hob damischa, des wiad a Mordsgaudi auszutzeln. Obazda is ozapfa Schorsch. Ned woar kummd Hemad in da Bradwurschtsemmal mechad Enzian, schüds nei?
+
+      .two.center
+        = image_tag 'sample2.jpg'
+        %h4 Da Woibbadinga
+        %p.lead Woibbadinga Wiesn Xaver Schbozal gor heitzdog. Griasd eich midnand ja, wo samma denn aasgem, sog i luja ham. Schüds nei naa imma wo hi Prosd Breihaus i hab an is des liab.
+
+      .three.center
+        = image_tag 'sample3.jpg'
+        %h4 As Edlweiss
+        %p.lead Auszutzeln Biagadn wolpern Edlweiss koa do fensdaln Bradwurschtsemmal naa auffi: Graudwiggal Radi nois jo mei is des schee sodala hinter’m Berg san a no Leit do legst di nieda woaß a bissal wos gehd ollaweil Weißwiaschd.
+
+.paprika.section-image.full.dark-content
+  %h2 Do host di gschnittn!
