--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -4,6 +4,8 @@ title: Woibbadinga
 
 .cover.section-image.full
   %h1 Woibbadinga
+  %div#bgVideo{:style => "left: 0; width: 100%; height: 100vh; z-index: 0; position: absolute;"}
+
 
 .intro.section-text
   .container.center
