--- a/source/assets/javascripts/application.js.coffee.erb
+++ b/source/assets/javascripts/application.js.coffee.erb
@@ -10,8 +10,7 @@ $(window).scroll ->
       'margin-top': ($this.scrollTop()/2)+"px"
       opacity: 1 - ($this.scrollTop()/1000)
 
-debugger
-$('#bgVideo').vide {mp4: '/assets/images/vb.mp4'},
+$('#bgVideo').vide {mp4: '<%= image_path('vb.mp4') %>'},
   volume: 0
   playbackRate: 0.5
   muted: true
