Fixed video path

--- a/source/assets/javascripts/application.js.coffee.erb
+++ b/source/assets/javascripts/application.js.coffee.erb
@@ -10,7 +10,7 @@ $(window).scroll ->
       'margin-top': ($this.scrollTop()/2)+"px"
       opacity: 1 - ($this.scrollTop()/1000)
 
-$('#bgVideo').vide {mp4: '/woibbadinga/assets<%= image_path('vb.mp4') %>'},
+$('#bgVideo').vide {mp4: '/woibbadinga/assets/images/vb.mp4'},
   volume: 0
   playbackRate: 0.5
   muted: true
