--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -4,7 +4,8 @@
 
 @import "bourbon";
 @import "base/base";
-
+@import "font-awesome";
+@import "animate.css/animate";
 // @import "typeplate-starter-kit/scss/typeplate";
 
 @import "global";
