--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -5,6 +5,7 @@ title: Woibbadinga
 .cover.section-image.full
   %h1 Woibbadinga
   %div#bgVideo{:style => "left: 0; width: 100%; height: 100vh; z-index: 0; position: absolute;"}
+  %i.down.fa.fa-chevron-down.fa-5x.animated.infinite.bounce
 
 
 .intro.section-text
